--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -155,6 +155,8 @@
     </div>
   </div>
 
+  {% include 'toast_messages.html' %}
+
   <script>
     // Profile picture preview functionality
     const uploadProfile = document.getElementById('upload_profile');
