--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -202,6 +202,8 @@
     </div>
   </div>
 
+  {% include 'toast_messages.html' %}
+
   <!-- Simple JavaScript for form enhancement -->
   <script>
     // Add form ID for desktop button to work
