--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="{% static 'assets/images/logo/favicon.svg' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'assets/images/logo/zeno_logo.png' %}" type="image/x-icon">
 
   <!--
     - custom css link
