--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Register | E-Commerce</title>
+  <title>Register | Zeno</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="shortcut icon" href="{% static 'assets/images/logo/favicon.svg' %}" type="image/x-icon" />
 </head>
