--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Edit Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="shortcut icon" href="{% static 'assets/images/logo/favicon.svg' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'assets/images/logo/zeno_logo_new.png' %}" type="image/x-icon">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body class="min-h-screen bg-gradient-to-br from-pink-50 to-purple-50 font-sans">
