--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Register | Zeno</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="shortcut icon" href="{% static 'assets/images/logo/favicon.svg' %}" type="image/x-icon" />
+  <link rel="shortcut icon" href="{% static 'assets/images/logo/zeno_logo_new.png' %}" type="image/x-icon" />
 </head>
 <body class="bg-pink-50">
 
