--- a/templates/index.html
+++ b/templates/index.html
@@ -1486,7 +1486,7 @@
                 <div class="service-content">
               
                   <h3 class="service-title">Next Day delivery</h3>
-                  <p class="service-desc">UK Orders Only</p>
+                  <p class="service-desc">Any Orders in India</p>
               
                 </div>
               
