--- a/templates/index.html
+++ b/templates/index.html
@@ -532,6 +532,10 @@
         <ion-icon name="person-outline"></ion-icon>
       </a>
 
+      <a href="{% url 'my-orders' %}" class="action-btn">
+        <ion-icon name="bag-check-outline"></ion-icon>
+      </a>
+
       <a href="{% url 'wishlist' %}" class="action-btn">
         <ion-icon name="heart-outline"></ion-icon>
         {% if wishlist_count > 0 %}
