--- a/templates/index.html
+++ b/templates/index.html
@@ -552,21 +552,26 @@
         <span class="count">{{ cart_count }}</span>
       </a>
 
-      <a href="{% url 'logout' %}" class="action-btn">
-        <ion-icon name="log-out-outline"></ion-icon>
-      </a>
       {% else %}
-      <a href="{% url 'login' %}" class="action-btn">
-        <ion-icon name="log-in-outline"></ion-icon>
-      </a>
-
+      
       <a href='{% url 'index' %}' class="action-btn">
         <ion-icon name="home-outline"></ion-icon>
       </a>
 
+      <a href="{% url 'wishlist' %}" class="action-btn">
+        <ion-icon name="heart-outline"></ion-icon>
+        {% if wishlist_count > 0 %}
+          <span class="count">{{ wishlist_count }}</span>
+        {% endif %}
+      </a>
+      
       <a href='{% url 'cart' %}' class="action-btn">
         <ion-icon name="bag-handle-outline"></ion-icon>
         <span class="count">{{ cart_count }}</span>
+      </a>
+
+      <a href="{% url 'login' %}" class="action-btn">
+        <ion-icon name="log-in-outline"></ion-icon>
       </a>
       {% endif %}
     </div>
